--- a/timer.css
+++ b/timer.css
@@ -1,3 +1,5 @@
+
+/*  final code*/
 body{
  background-image: url("https://media.giphy.com/media/xTiTnI1mdyxsFKTFjW/giphy.gif"); 
  background-size: cover;
@@ -10,12 +12,12 @@ body{
     /* color:rgb(192, 132, 34); */
     color: rgb(212, 224, 224);
     text-align: center;
-    font-size: 90px;
+    font-size: 95px;
      /* text-decoration-color: rgba(0, 0, 0, 0.383); */
     margin-top: 300px;
     position: relative;
     font-family: 'Merienda', cursive;
-    text-shadow: 2px 2px rgb(55, 56, 51);
+    text-shadow: 3px 3.7px 4px rgb(151, 140, 117);
 }
 .displaytime
 {
@@ -40,7 +42,7 @@ body{
     position: relative;
     font-family: 'Merienda', cursive;
     text-shadow: 0.5px 1px rgb(255, 252, 205);
-    box-shadow: 3px 3px 2px; 
+    box-shadow: 3px 3px 2px rgb(236, 232, 196); 
 
 }
 .row
@@ -55,17 +57,17 @@ body{
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
     background:rgb(255, 187, 0);
-    box-shadow: 3px 3px 2px;
+    box-shadow: 3px 3.5px 2.5px rgb(241, 237, 196);
 }
 .my-col2
 {
     background:rgb(255, 174, 0);
-    box-shadow: 3px 3px 2px;
+    box-shadow: 3px 3.5px 2.5px rgb(241, 237, 196);
 }
 .my-col3
 {
     background: rgb(255, 157, 0);
-    box-shadow: 3px 3px 2px;
+    box-shadow: 3px 3.5px 2.5px rgb(241, 237, 196);
 }
 .my-col4
 {
@@ -73,7 +75,7 @@ body{
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
     /* background: rgb(255, 102, 0); */
-    box-shadow: 3px 3px 2px;
+    box-shadow: 3px 3.5px 2.5px rgb(241, 237, 196);
 }
  
 input
@@ -83,7 +85,7 @@ input
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
     /* background: rgb(255, 102, 0); */
-    box-shadow: 3px 3px 2px;
+    box-shadow: 2px 2px 2px rgb(241, 237, 196);
     width: 180px;;
 
 }
